service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: appjr-pod
  name: appjr-pod
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
    nodePort: 30081
  selector:
    app: appjr-pod
  type: NodePort
status:
  loadBalancer: {}
